# rust-play

./: .gitignore  README.md  README.md.enc  codespaces-startup-list.txt  csv2markdown-table.sh  install-rust.sh  merge.sh  permalinks.md  upgrade-rust.sh
actix-gcd/src/: main.rs
age-tests/: Cargo.toml  README.md  key-service.ed  key.age  key.pub  notes.md  phrase  readme.md.age
age-tests/play/: ed25519  ed25519.pub  priv.key  readme.md  recipient.txt  result  test.age
age-tests/src/: main.rs
asyc-tcp-chat-server/src/: main.rs
async-chat/: README.md
async-std-test/: Cargo.toml  justfile
async-std-test/data/: file-1.txt  file-2.txt  file-3.txt
async-std-test/src/: files.rs  lib.rs  main.rs  worker.rs
async-tcp-chat-server/: README.md
async-tcp-chat-server/src/: main.rs
background-runner/: .gitignore  Cargo.toml
background-runner/src/: main.rs
background-runner/tmp/: README.md
blog-post/src/: lib.rs  main.rs
btree/src/: lib.rs  main.rs
docker-utils/: Cargo.toml  README.md  justfile
docker-utils/scripts/: list-containers.sh  list-images.sh
docker-utils/src/: main.rs
email-tests/: .gitignore  Cargo.toml  notes.html  todo.md
email-tests/src/: main.rs
grepper/: Cargo.toml  Makefile  watcher
grepper/src/: lib.rs  main.rs
hash-tests/: .gitignore  Cargo.toml  justfile  watch
hash-tests/config/: rolling.yaml
hash-tests/data/: mydb.data  person-list.json
hash-tests/src/: lib.rs  main.rs
hello_ockam/examples/: bob.rs
json-enc-dec/: Cargo.toml  build.rs
json-enc-dec/clib/: hello.c
json-enc-dec/src/: main.rs
jsonrpc-http/: Cargo.toml
jsonrpc-http/curl/: config.sh  status.sh  version.sh
jsonrpc-http/src/: main.rs
loom-test/: Cargo.toml  run
loom-test/src/: main.rs
loom-test/tests/: buggy_concurrent_inc.rs
multi-redis-manager/: .gitignore  Cargo.toml  dump.rdb  justfile
multi-redis-manager/config/: redis.conf
multi-redis-manager/instances/: redis-2001.conf
multi-redis-manager/src/: main.rs
my-redis/: Cargo.toml
my-redis/src/: main.rs
my-tui-app/: Cargo.toml
my-tui-app/src/: lib.rs
ockam_hello/: Cargo.toml
ockam_hello/examples/: alice.rs  bob.rs
oop-trait/: Cargo.toml
oop-trait/src/: main.rs
openssl-tests/: Cargo.toml  todo.md
openssl-tests/src/: main.rs
password-hash/: Cargo.toml
password-hash/src/: main.rs
pipe_viewer/: .gitignore  Cargo.toml  README.md
pipe_viewer/src/: args.rs  lib.rs  main.rs  read.rs  stats.rs
pipe_viewer/tests/: quick-test.sh  text-file.out  text-file.txt
playground/: .gitignore  Cargo.toml  README.md  chacha-readme.md  justfile  todo.md
playground/data/: key.json  keys.json  out.enc  plain.txt
playground/tests/: cloud.eb64  cloud.plain  email.toml  emails.eb64  keys.toml  secret-1.plain  users.toml
quickreplace/: Cargo.toml
quickreplace/src/: main.rs
random-words/: Cargo.toml
random-words/src/: main.rs
redis-supervisor/: .env  .gitignore  Cargo.toml  justfile  todo.md
redis-supervisor/config/: redis.conf-socket.template  redis.conf.template  rolling.yaml  supervisor.toml
redis-supervisor/instances/: redis-2001.conf  redis-2002.conf  redis-2003.conf
redis-supervisor/src/: main.rs
redis-test/: Cargo.toml
redis-test/examples/: hello-redis.rs
redis-test/src/: main.rs
scripts/: README.md  args.rs  async-command.rs  async-page-request.rs  atomic-test.rs  b36rand.rs  base62.rs  base64.rs  big_hash.rs  bigdemo.rs  bigrand.rs  calc_pi.rs  canonical.rs  celler.rs  chacha-rand.rs  char_counter.rs  clapper.rs  closure_pointer.rs  delay_message.rs  domain_key.rs  env_var.rs  factorial.rs  fib.rs  file-copy.rs  file-exists.rs  file-line-reader.rs  file-metadata.rs  file-reader.rs  file-writer.rs  fizzbuzz.rs  fruit_sales.rs  func_pointer.rs  getrandom.rs  guess-number.rs  hash-non-type.rs  hashmap_tests.rs  hello_runner.rs  ip_enum.rs  isprime.rs  json-encode.rs  (+29 more)
scripts/data/: bad.json  keys.toml  sample.toml  table.csv  user.json  users.kv  users.toml
serial-comm/: Cargo.toml
serial-comm/src/: main.rs
sessions/: Cargo.toml
sessions/src/: main.rs  sessions.rs
spacial-controller/: .gitignore  .rustfmt.toml  Cargo.toml  README.md  justfile
spacial-controller/config/: rolling.yaml
spacial-controller/plans/: test-plan.json
spacial-controller/src/: attitude.rs  config.rs  drone.rs  lib.rs  main.rs  position.rs  velocity.rs
spacial-controller/tests/: drone_tests.rs
ssh2-tests/: Cargo.toml
ssh2-tests/src/: main.rs
tiny-hello-server/: .gitignore  Cargo.toml  justfile
tiny-hello-server/src/: main.rs
tm-cli/: Cargo.toml  README.md
tokio-tests/: Cargo.toml  README.md  justfile
tokio-tests/examples/: bytes-test.rs  hello-redis.rs  runner.rs  simple-sleep.rs  tcp-echo.rs  tcp-server.rs  time_tests.rs  timeout.rs
tokio-tests/src/: lib.rs  main.rs
toml-domain/: Cargo.toml
toml-domain/src/: main.rs
udp-client-server/: Cargo.toml  README.md
udp-net/: .gitignore  Cargo.toml
udp-net/src/: main.rs  server.rs
validation-tests/: .gitignore  Cargo.toml
validation-tests/src/: main.rs
web-chat/: Cargo.toml  chat.html  todo.md
web-chat/src/: main.rs
