[package]
name = "async-std-test"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-channel = "1.8.0"
async-std = { version = "1.12.0", features = ["async-attributes", "async-process", "attributes", "futures-core", "tokio1", ] }
fastrand = "1.8.0"
log = "0.4.17"
log4rs = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
domain_keys = { git = "https://github.com/darrylwest/domain-keys.git" }
service_uptime = { git = "https://github.com/darrylwest/service-uptime.git" }
surf = "2.3.2"
