[package]
name = "hash-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
hashbrown = "0.12.3"
chrono = "0.4"
log = "0.4"
log4rs = "1"
num = "0.4"
