[package]
name = "hash-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
hashbrown = { version = "0.12.3", features = ["serde"] }
chrono = { version = "0.4",  features = ["serde"] }
log = "0.4"
log4rs = "1"
num = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
