[package]
name = "json-enc-dec"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] } 

[build-dependencies]
cc = "1.0"
