[package]
name = "pipe_viewer"
version = "0.1.3"
edition = "2021"
authors = [ "darryl.west@raincitysoftware.com" ]
description = "View pipe stats while pipeline is being processed"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
anyhow = "1.0"
crossbeam = "0.8.2"
crossterm = "0.25.0"
