[package]
name = "playground"
version = "0.2.1"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argon2 = "0.5.2"
async-channel = "2.1.0"
async-io = "2.2.0"
async-process = "2.0"
async-std = { version = "1.12.0", features = ["async-attributes", "async-process", "attributes", "futures-core" ] }
base64 = "0.21.0"
base85 = "2.0.0"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.1.1", features = ["derive"] }
fastrand = "2.0.1"
futures = "0.3.25"
generic-array = { version = "1.0.0", features = ["serde"] }
hashbrown = { version = "0.14.1", features = ["rayon"] }
log = { version = "0.4.17", features = ["serde"] }
ndarray = { version = "0.15.5", features = ["rayon", "serde"] }
num = { version = "0.4.0", features = ["rand", "num-bigint", "serde"] }
rand_core = { version = "0.6.4", features = ["serde"] }
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.91"
toml = "0.8.8"
typenum = "1.16.0"
zxcvbn = { version = "2.2.1", features = ["serde"] }
