[package]
name = "sessions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
log4rs = "1.2.0"
domain_keys = { git = "https://github.com/darrylwest/domain-keys.git" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.1"

