[package]
name = "spacial_controller"
version = "0.2.3"
edition = "2021"
authors = [ "darryl.west@raincitysoftware.com" ]
description = "A controller for flight and underwater drones."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
log4rs = "1"
num = "0.4"
