[package]
name = "redis-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.66"
chrono = { version = "0.4.23", features = ["serde"] }
