[package]
name = "toml-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
toml = "0.5.9"
domain_keys = { git = "https://github.com/darrylwest/domain-keys.git" }
